--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@
   margin-bottom: 16px;
   height: 2px;
   background-color: #ffffff;
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -141,15 +141,21 @@
 
 .image-2 {
   border-width: 2px;
-  width: calc(50vw);
+  width: 415px;
   aspect-ratio: 415/482;
+  object-fit: cover;
   position: relative;
+}
+
+.frame-96 {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .frame-110 {
   display: flex;
   flex-direction: column;
-  gap: 58px;
   align-items: flex-start;
   justify-content: flex-start;
   position: relative;
@@ -318,6 +324,7 @@
   justify-content: space-between;
   width: 100%;
   position: relative;
+  margin-bottom: 55px;
 }
 
 ._1 {
@@ -368,7 +375,7 @@
 .frame-106,
 .frame-105 {
   border-radius: 4px;
-  padding: 19px 32px;
+  padding: 0 32px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -393,9 +400,10 @@
 
 .class6 {
   color: #ffffff;
-  text-align: left;
+  text-align: center;
   font: 700 16px "Pretendard", sans-serif;
   position: relative;
+  width: max-content;
 }
 
 .frame-23 {
@@ -760,9 +768,6 @@
 }
 
 .frame-33 {
-  /* display: flex;
-  flex-direction: row;
-  gap: 61px; */
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -1378,4 +1383,37 @@
 
 .footer .bottom {
   margin-top: 43px;
+}
+
+.main-policy {
+  width: calc(100vw);
+}
+
+.vector-74 {
+  width: 100%;
+  height: 1px;
+  background-color: #FFEFEF;
+}
+
+.scrolling_purchase {
+  background-color: #ffffff;
+  width: calc(100vw);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  filter: drop-shadow(0px -1px 15px rgba(183, 183, 183, 0.14));
+}
+
+.scrolling_purchase .container {
+  padding: 45px 200px 50px 200px;
+  margin: 0 auto;
+}
+
+.scrolling_purchase .container .frame-102 {
+  background-color: #ffffff;
+  padding: 0;
+}
+
+.scrolling_purchase .container .frame-104 {
+  padding: 0;
 }
